2004-11-25 Mikhail Khodjaiants
	Fix for bug 79452: Unable to set a breakpoint on a class method.
	* plugin.xml
	* ToggleBreakpointAdapter.java

2004-11-25 Mikhail Khodjaiants
	Replaced the "breakpointRemoved" method of ICBreakpointListener by the "breakpointsRemoved"
	method that accepts multiple breakpoints.
	* CBreakpointUpdater.java

2004-11-23 Mikhail Khodjaiants
	Workaround for bug 69728: IndexOutOfBoundsException in TextPresentation.
	This bug is fixed in Eclipse 3.1.
	* DisassemblyView.java

2004-11-18 Mikhail Khodjaiants
	Fix for bug 69184: Activate the Expression view when expression is added.
	* AddExpressionEditorActionDelegate.java

2004-11-15 Mikhail Khodjaiants
	Fix for bug 78604: Disassembly causes Java exception when disassembling beyond fn(?).
	* DisassemblyEditorInput.java

2004-11-11 Mikhail Khodjaiants
	Fix for bug 73801: Function breakpoints set from C View aren't shown in editor.
	* ToggleBreakpointAdapter.java

2004-11-10 Mikhail Khodjaiants
	Fix for bug 77437: Disassembly blocks with no associated source code has PC pointer on wrong line.
	* DisassemblyEditorInput.java

2004-11-09 Mikhail Khodjaiants
	Partial fix for bug 41725: I can't set a breakpoint in a function where I used attach source.
	* CDTDebugModelPresentation.java
	* ToggleBreakpointAdapter.java
	* CBreakpointPropertyPage.java

2004-11-09 Mikhail Khodjaiants
	Fix for bug 77251: Need protected access to DisassemblyView's createVerticalRuler() method. 
	* DisassemblyView.java

2004-11-05 Mikhail Khodjaiants
	Cleanup.
	* PreferenceMessages.properties
	* ActionMessages.properties
	* plugin.properties

2004-11-04 Mikhail Khodjaiants
	Removed "Refresh" and "Auto-Refresh" actions from the shared libraries view.
	* AbstractAutoRefreshActionDelegate.java: removed
	* AbstractRefreshAction.java: removed
	* AutoRefreshSharedLibrariesActionDelegate.java: removed
	* RefreshSharedLibrariesAction.java: removed
	* CDebugPreferencePage.java
	* plugin.xml

2004-11-04 Mikhail Khodjaiants